fix whitespace above sign in button

--- a/components/automate-dex/web/theme/styles.css
+++ b/components/automate-dex/web/theme/styles.css
@@ -32,6 +32,10 @@ button {
   line-height: 33px;
 }
 
+button.sign-in {
+    display: inline;
+}
+
 div.logo {
   margin-bottom: 30px;
 }
